welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: '=' expected but '(' found.
def fini:Boolean(){
                ^SnakeBuggle:19: error: illegal start of simple expression
override def run() {
^